OH-945 mask data for yksityinen elinkeinoharjoittaja and piilotettu organisations